cmake_minimum_required(VERSION 3.19)
project(OOP_CPP_Lafore)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP_CPP_Lafore
        #chapter2/task1.cpp
        #chapter2/task2.cpp
        #chapter2/task3.cpp
        #chapter2/task4.cpp
        #chapter2/task5.cpp
        #chapter2/task6.cpp
        #chapter2/task7.cpp
        #chapter2/task8.cpp
        #chapter2/task9.cpp
        #chapter2/task10.cpp
        #chapter2/task11.cpp
        chapter2/task12.cpp
        )
